--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "echo 'No build needed",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
